[gd_scene load_steps=9 format=3 uid="uid://bvywh4gs5xuci"]

[ext_resource type="FontFile" uid="uid://5femt7y4g7nr" path="res://Fonts/m5x7.ttf" id="1_hci0q"]
[ext_resource type="Script" path="res://Scripts/UI/Settings/MainSettings.gd" id="1_q1rm0"]
[ext_resource type="Script" path="res://Scripts/UI/Settings/VideoSettings.gd" id="2_7xqac"]
[ext_resource type="FontFile" uid="uid://bkxjdgegbqn46" path="res://Fonts/m3x6.ttf" id="3_ufrlf"]
[ext_resource type="Script" path="res://Scripts/UI/Settings/AudioSettings.gd" id="4_i6dhm"]
[ext_resource type="Script" path="res://addons/slidergamepad/hslider_gamepad.gd" id="6_7wjb0"]
[ext_resource type="Script" path="res://Scripts/UI/Settings/ContolSettings.gd" id="6_tffsd"]
[ext_resource type="PackedScene" uid="uid://dno85da3ev1uv" path="res://Scenes/UI/Settings/rebind_controls_screen.tscn" id="7_7ecvv"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_q1rm0")

[node name="SettingsHolder" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsHolder"]
layout_mode = 0
offset_left = 40.0
offset_top = 4.0
offset_right = 283.0
offset_bottom = 174.0

[node name="SettingsCategories" type="HBoxContainer" parent="SettingsHolder/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="VideoCategoryButton" type="Button" parent="SettingsHolder/VBoxContainer/SettingsCategories"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_hci0q")
theme_override_font_sizes/font_size = 32
text = "Video"

[node name="AudioCategoryButton" type="Button" parent="SettingsHolder/VBoxContainer/SettingsCategories"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_hci0q")
theme_override_font_sizes/font_size = 32
text = "Audio"

[node name="ControlCategoryButton" type="Button" parent="SettingsHolder/VBoxContainer/SettingsCategories"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_hci0q")
theme_override_font_sizes/font_size = 32
text = "Controls"

[node name="VideoSettings" type="Control" parent="SettingsHolder/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("2_7xqac")

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsHolder/VBoxContainer/VideoSettings"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 100.0
grow_horizontal = 2

[node name="FullScreenCheckBox" type="CheckBox" parent="SettingsHolder/VBoxContainer/VideoSettings/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_hci0q")
text = "FullScreen"

[node name="VSyncCheckBox" type="CheckBox" parent="SettingsHolder/VBoxContainer/VideoSettings/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_hci0q")
text = "VSync"

[node name="ScreenshakeCheckBox" type="CheckBox" parent="SettingsHolder/VBoxContainer/VideoSettings/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_hci0q")
button_pressed = true
text = "Screenshake"

[node name="FPSContainer" type="HBoxContainer" parent="SettingsHolder/VBoxContainer/VideoSettings/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="FPSLabel" type="Label" parent="SettingsHolder/VBoxContainer/VideoSettings/VBoxContainer/FPSContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ufrlf")
text = "FPS: 300"

[node name="FpsSlider" type="HSlider" parent="SettingsHolder/VBoxContainer/VideoSettings/VBoxContainer/FPSContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 30.0
max_value = 300.0
value = 60.0

[node name="AudioSettings" type="Control" parent="SettingsHolder/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("4_i6dhm")

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsHolder/VBoxContainer/AudioSettings"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 100.0
grow_horizontal = 2

[node name="MasterVolumeSlider" type="HBoxContainer" parent="SettingsHolder/VBoxContainer/AudioSettings/VBoxContainer"]
layout_mode = 2
focus_mode = 2
theme_override_constants/separation = 10

[node name="MasterVolumeLabel" type="Label" parent="SettingsHolder/VBoxContainer/AudioSettings/VBoxContainer/MasterVolumeSlider"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ufrlf")
text = "Volume: 60%"

[node name="MasterVolumeSlider" type="HSlider" parent="SettingsHolder/VBoxContainer/AudioSettings/VBoxContainer/MasterVolumeSlider"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
focus_neighbor_top = NodePath("../../AmbienceSlider/AmbienceVolumeSlider")
focus_neighbor_bottom = NodePath("../../SoundEffectSlider/SoundEffectVolumeSlider")
value = 60.0
script = ExtResource("6_7wjb0")
slider_speed = 60.0
dpad_step = 1

[node name="SoundEffectSlider" type="HBoxContainer" parent="SettingsHolder/VBoxContainer/AudioSettings/VBoxContainer"]
layout_mode = 2
focus_mode = 2
theme_override_constants/separation = 10

[node name="SoundEffectVolumeLabel" type="Label" parent="SettingsHolder/VBoxContainer/AudioSettings/VBoxContainer/SoundEffectSlider"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ufrlf")
text = "Volume: 60%"

[node name="SoundEffectVolumeSlider" type="HSlider" parent="SettingsHolder/VBoxContainer/AudioSettings/VBoxContainer/SoundEffectSlider"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
focus_neighbor_top = NodePath("../../MasterVolumeSlider/MasterVolumeSlider")
focus_neighbor_bottom = NodePath("../../MusicSlider/musicVolumeSlider")
value = 60.0
script = ExtResource("6_7wjb0")
slider_speed = 60.0
dpad_step = 1

[node name="MusicSlider" type="HBoxContainer" parent="SettingsHolder/VBoxContainer/AudioSettings/VBoxContainer"]
layout_mode = 2
focus_mode = 2
theme_override_constants/separation = 10

[node name="MusicVolumeLabel" type="Label" parent="SettingsHolder/VBoxContainer/AudioSettings/VBoxContainer/MusicSlider"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ufrlf")
text = "Volume: 60%"

[node name="musicVolumeSlider" type="HSlider" parent="SettingsHolder/VBoxContainer/AudioSettings/VBoxContainer/MusicSlider"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
focus_neighbor_top = NodePath("../../SoundEffectSlider/SoundEffectVolumeSlider")
focus_neighbor_bottom = NodePath("../../AmbienceSlider/AmbienceVolumeSlider")
value = 60.0
script = ExtResource("6_7wjb0")
slider_speed = 60.0
dpad_step = 1

[node name="AmbienceSlider" type="HBoxContainer" parent="SettingsHolder/VBoxContainer/AudioSettings/VBoxContainer"]
layout_mode = 2
focus_mode = 2
theme_override_constants/separation = 10

[node name="AmbienceVolumeLabel" type="Label" parent="SettingsHolder/VBoxContainer/AudioSettings/VBoxContainer/AmbienceSlider"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ufrlf")
text = "Volume: 60%"

[node name="AmbienceVolumeSlider" type="HSlider" parent="SettingsHolder/VBoxContainer/AudioSettings/VBoxContainer/AmbienceSlider"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
focus_neighbor_top = NodePath("../../MusicSlider/musicVolumeSlider")
focus_neighbor_bottom = NodePath("../../MasterVolumeSlider/MasterVolumeSlider")
value = 60.0
script = ExtResource("6_7wjb0")
slider_speed = 60.0
dpad_step = 1

[node name="ContolSettings" type="Control" parent="SettingsHolder/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("6_tffsd")

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsHolder/VBoxContainer/ContolSettings"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 100.0
grow_horizontal = 2

[node name="ChangeKeybindsButton" type="Button" parent="SettingsHolder/VBoxContainer/ContolSettings/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ufrlf")
theme_override_font_sizes/font_size = 16
text = "Change Keybinds"

[node name="ControllerSettingsLabel" type="Label" parent="SettingsHolder/VBoxContainer/ContolSettings/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_hci0q")
text = "Controller Settings:"

[node name="InvertStickInputCheckBox" type="CheckBox" parent="SettingsHolder/VBoxContainer/ContolSettings/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_hci0q")
text = "Invert Stick Input"

[node name="ControllerDeadzoneSlider" type="HBoxContainer" parent="SettingsHolder/VBoxContainer/ContolSettings/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ControllerDeadzoneVolumeLabel" type="Label" parent="SettingsHolder/VBoxContainer/ContolSettings/VBoxContainer/ControllerDeadzoneSlider"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ufrlf")
text = "Controller Deadzone: 0.3"

[node name="ControllerDeadzoneVolumeSlider" type="HSlider" parent="SettingsHolder/VBoxContainer/ContolSettings/VBoxContainer/ControllerDeadzoneSlider"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 0.9
step = 0.05
value = 0.3

[node name="MouseSettingsLabel" type="Label" parent="SettingsHolder/VBoxContainer/ContolSettings/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_hci0q")
text = "Mouse Settings:"

[node name="ColorRect" type="ColorRect" parent="SettingsHolder"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -86.0
offset_right = 123.0
offset_bottom = 84.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.203922, 0.215686, 0.239216, 0.180392)

[node name="RebindControls" parent="." instance=ExtResource("7_7ecvv")]
visible = false
layout_mode = 1
mouse_filter = 1

[node name="RebindBackButton" type="Button" parent="RebindControls"]
layout_mode = 0
offset_left = 270.0
offset_top = 140.0
offset_right = 300.0
offset_bottom = 161.0
theme_override_fonts/font = ExtResource("1_hci0q")
text = "Back"

[connection signal="pressed" from="SettingsHolder/VBoxContainer/SettingsCategories/VideoCategoryButton" to="." method="_on_video_category_button_pressed"]
[connection signal="pressed" from="SettingsHolder/VBoxContainer/SettingsCategories/AudioCategoryButton" to="." method="_on_audio_category_button_pressed"]
[connection signal="pressed" from="SettingsHolder/VBoxContainer/SettingsCategories/ControlCategoryButton" to="." method="_on_control_category_button_pressed"]
[connection signal="toggled" from="SettingsHolder/VBoxContainer/VideoSettings/VBoxContainer/FullScreenCheckBox" to="SettingsHolder/VBoxContainer/VideoSettings" method="_on_full_screen_check_box_toggled"]
[connection signal="toggled" from="SettingsHolder/VBoxContainer/VideoSettings/VBoxContainer/VSyncCheckBox" to="SettingsHolder/VBoxContainer/VideoSettings" method="_on_v_sync_check_box_toggled"]
[connection signal="toggled" from="SettingsHolder/VBoxContainer/VideoSettings/VBoxContainer/ScreenshakeCheckBox" to="SettingsHolder/VBoxContainer/VideoSettings" method="_on_screenshake_check_box_toggled"]
[connection signal="drag_ended" from="SettingsHolder/VBoxContainer/VideoSettings/VBoxContainer/FPSContainer/FpsSlider" to="SettingsHolder/VBoxContainer/VideoSettings" method="_on_fps_slider_drag_ended"]
[connection signal="value_changed" from="SettingsHolder/VBoxContainer/VideoSettings/VBoxContainer/FPSContainer/FpsSlider" to="SettingsHolder/VBoxContainer/VideoSettings" method="_on_fps_slider_value_changed"]
[connection signal="value_changed" from="SettingsHolder/VBoxContainer/AudioSettings/VBoxContainer/MasterVolumeSlider/MasterVolumeSlider" to="SettingsHolder/VBoxContainer/AudioSettings" method="_on_master_volume_slider_value_changed"]
[connection signal="value_changed" from="SettingsHolder/VBoxContainer/AudioSettings/VBoxContainer/SoundEffectSlider/SoundEffectVolumeSlider" to="SettingsHolder/VBoxContainer/AudioSettings" method="_on_sound_effect_volume_slider_value_changed"]
[connection signal="value_changed" from="SettingsHolder/VBoxContainer/AudioSettings/VBoxContainer/MusicSlider/musicVolumeSlider" to="SettingsHolder/VBoxContainer/AudioSettings" method="_on_music_volume_slider_value_changed"]
[connection signal="value_changed" from="SettingsHolder/VBoxContainer/AudioSettings/VBoxContainer/AmbienceSlider/AmbienceVolumeSlider" to="SettingsHolder/VBoxContainer/AudioSettings" method="_on_ambience_volume_slider_value_changed"]
[connection signal="pressed" from="SettingsHolder/VBoxContainer/ContolSettings/VBoxContainer/ChangeKeybindsButton" to="SettingsHolder/VBoxContainer/ContolSettings" method="_on_change_keybinds_button_pressed"]
[connection signal="toggled" from="SettingsHolder/VBoxContainer/ContolSettings/VBoxContainer/InvertStickInputCheckBox" to="SettingsHolder/VBoxContainer/ContolSettings" method="_on_invert_stick_input_check_box_toggled"]
[connection signal="value_changed" from="SettingsHolder/VBoxContainer/ContolSettings/VBoxContainer/ControllerDeadzoneSlider/ControllerDeadzoneVolumeSlider" to="SettingsHolder/VBoxContainer/ContolSettings" method="_on_controller_deadzone_volume_slider_value_changed"]
[connection signal="closed_rebind_menu" from="RebindControls" to="SettingsHolder/VBoxContainer/ContolSettings" method="_on_rebind_controls_closed_rebind_menu"]
[connection signal="opened_rebind_menu" from="RebindControls" to="SettingsHolder/VBoxContainer/ContolSettings" method="_on_rebind_controls_opened_rebind_menu"]
[connection signal="pressed" from="RebindControls/RebindBackButton" to="SettingsHolder/VBoxContainer/ContolSettings" method="_on_rebind_back_button_pressed"]
